Update Notes NSD S07 217a26964f5680e3ae42db8c90c9ee28.md

--- a/System Design Notes and Assignment/Notes NSD S07 217a26964f5680e3ae42db8c90c9ee28.md
+++ b/System Design Notes and Assignment/Notes NSD S07 217a26964f5680e3ae42db8c90c9ee28.md
@@ -112,7 +112,8 @@ console.log(iphone.getDescription());
 
 ## Class Diagram Summary
 
-![ClassDiagram-Factory.png](Notes%20NSD%20S07%20217a26964f5680e3ae42db8c90c9ee28/ClassDiagram-Factory.png)
+
+![S07_1st-photo-ClassDiagram-Factory](https://coding-platform.s3.amazonaws.com/dev/lms/tickets/6ac5d9c6-bacf-4f63-8b24-e608c8bf57ce/WwZHvGilWaqWhvpV.png)
 
 - `Product` is the interface.
 - `Laptop` and `Mobile` implement `Product`.
@@ -242,7 +243,8 @@ In TypeScript, **getter methods are accessed like properties**, without parenthe
 
 ## Class Diagram Summary
 
-![ClassDiagram-Singleton.png](Notes%20NSD%20S07%20217a26964f5680e3ae42db8c90c9ee28/ClassDiagram-Singleton.png)
+![S07-2nd-photo-ClassDiagram-Singleton](https://coding-platform.s3.amazonaws.com/dev/lms/tickets/391162c5-25f5-4e33-b88e-7859e69f5f88/TTwf2WGo1kaejLtk.png)
+
 
 - Constructor is private.
 - Static method controls object creation.
