Update Notes NSD S08 21ba26964f568083a892c0909ef5d354.md

--- a/System Design Notes and Assignment/Notes NSD S08 21ba26964f568083a892c0909ef5d354.md
+++ b/System Design Notes and Assignment/Notes NSD S08 21ba26964f568083a892c0909ef5d354.md
@@ -573,4 +573,5 @@ exit
 
 ## Output
 
-![Screenshot 2025-02-19 at 2.41.33 PM.png](Notes%20NSD%20S08%2021ba26964f568083a892c0909ef5d354/Screenshot_2025-02-19_at_2.41.33_PM.png)
+
+![Screenshot_2025-02-19_at_2.41.33_PM](https://coding-platform.s3.amazonaws.com/dev/lms/tickets/e4d59961-1e82-4398-9575-46d916e535a4/xC02MaGeLYsLZTLg.png)
