Update Notes SAL S09 21ba26964f5680268befe64874649966.md

--- a/System Design Notes and Assignment/Notes SAL S09 21ba26964f5680268befe64874649966.md
+++ b/System Design Notes and Assignment/Notes SAL S09 21ba26964f5680268befe64874649966.md
@@ -500,11 +500,13 @@ makeAnimalSpeak(new Cat()); // Meow!
 
 ## Singleton : Class Diagram
 
-![Screenshot 2025-05-08 at 3.25.59 PM.png](Notes%20SAL%20S09%2021ba26964f5680268befe64874649966/Screenshot_2025-05-08_at_3.25.59_PM.png)
+![Screenshot_2025-05-08_at_3.25.59_PM](https://coding-platform.s3.amazonaws.com/dev/lms/tickets/dca53e69-b1f8-44ca-9eb9-284c16cae78f/fBCGvqZWyCacXFGe.png)
 
 ## Factory : Class Diagram
 
-![Screenshot 2025-05-08 at 3.23.56 PM.png](Notes%20SAL%20S09%2021ba26964f5680268befe64874649966/Screenshot_2025-05-08_at_3.23.56_PM.png)
+
+![Screenshot_2025-05-08_at_3.23.56_PM](https://coding-platform.s3.amazonaws.com/dev/lms/tickets/7372f925-297b-400e-867d-e66260145951/0BZkCdosSSnZylA0.png)
+
 
 ## Composition vs Agregation
 
